# src/PaperMalKing/Api/Contracts/Responses/LicenseResponse.cs
@@ -1,0 +1,6 @@
+// SPDX-License-Identifier: AGPL-3.0-or-later
+// Copyright (C) 2021-2026 N0D4N
+
+namespace PaperMalKing.Api.Contracts.Responses;
+
+internal sealed record LicenseResponse(string Name, string Version, string? Identifier, string? Text, Uri? Url);
